--- a/css/styles.css
+++ b/css/styles.css
@@ -5,61 +5,50 @@ margin: 0;
 padding: 0;
   }
 body {
-width: 1440px;
-height: 3300px;  
-font-family: Roboto, "Raleway", sans-serif; 
+
+font-family: Roboto, sans-serif; 
 background: #FFF;
-color: var(--NAVY-BLUE, #2E2F42);
+color: #434455
 
 }
 .head {
-border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
-background: var(--WHITE, #FFF);
+color: #E7E9FC;
+background:  #FFF;
 }
 .logo {
-color: var(--IRIS, #4D5AE5);
+color:#4D5AE5;
 font-family: Raleway;
-font-size: 18px;
-font-weight: 700;
 line-height: 116.667%;
 letter-spacing: 0.54px;
 text-transform: uppercase;
 }
 .logo_iris {
-color: var(--IRIS, #4D5AE5);
+color: #4D5AE5;
 font-family: Raleway;
 
 }
 .logo_navy {
-color: var(--NAVY-BLUE, #2E2F42);
+color:#2E2F42;
 font-family: Raleway;
 }
 .navigation_list_item_site {
 
-font-size: 16px;
-font-weight: 500;
 line-height: 150%;
 letter-spacing: 0.32px;}
 
  .address_page_list_contact {
-color: var(--SLATE, #434455);
-font-size: 16px;
+color:#434455;
 line-height: 150%;
 letter-spacing: 0.32px;
  } 
  .main_title_section {
-background: var(--NAVY-BLUE, #2E2F42);
-width: 1440px;
-height: 600px;
+background: #2E2F42;
 flex-shrink: 0;
  
  }
  .main_title_section_item {
-color: var(--WHITE, #FFF);
-text-align: center;
+color:#FFF;
 font-family: Roboto;
-font-size: 56px;
-font-weight: 700;
 line-height: 107.143%;
 letter-spacing: 1.12px;
 padding-top: 188px;
@@ -68,86 +57,59 @@ padding-top: 188px;
   
 .button{
 cursor: pointer;
-border-radius: 4px;
-background: var(--IRIS, #4D5AE5);
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-display: inline-flex;
-padding: 16px 32px;
-align-items: flex-start;
-gap: 10px;
-
+background:#4D5AE5;
 }
  .functions_list_item {
 font-family: Roboto;
 font-size: 20px;
-font-weight: 500;
-line-height: 120%;
 letter-spacing: 0.4px;
  }
  .functions_list_item_text {
-color: var(--SLATE, #434455);
+color: #434455;
 font-size: 16px;
-font-weight: 400;
-line-height: 150%;
 letter-spacing: 0.32px;
  }
 
  .team_title {
-text-align: center;
 font-family: Roboto;
- font-size: 36px;
- font-weight: 700;
 line-height: 111.111%;
-letter-spacing: 0.72px;
 text-transform: capitalize;
- padding-top: 120px;
  }
  .team_name {
  font-size: 20px;
-font-weight: 500;
-line-height: 120%;
 letter-spacing: 0.4px;
+line-height: 120%;
  }
  .team_profession {
-color: var(--SLATE, #434455);
-font-size: 16px;
-line-height: 150%;
+color:#434455;
 letter-spacing: 0.32px;
+line-height: 150%; 
  }
  .portfolio_title {
-text-align: center;
 font-family: Roboto;
-font-size: 36px;
-font-weight: 700;
 line-height: 111.111%;
-letter-spacing: 0.72px;
 text-transform: capitalize;
  }
  .portfolio_name {
 font-family: Roboto;
-font-size: 20px;
-font-weight: 500;
 line-height:120%;
 letter-spacing: 0.4px;
  } 
  .text_footer {
-color: var(--CLOUD, #F4F4FD);
-font-size: 16px;
+color:#F4F4FD;
 line-height: 150%;
 letter-spacing: 0.32px;
  }
  .footer {
-width: 1440px;
- height: 312px;
-flex-shrink: 0;
-background: var(--NAVY-BLUE, #2E2F42);
+background:  #2E2F42;
  }
+ .logo_iris {
+     color: #4D5AE5;
+     font-family: Raleway;}
+     
  .logo_cloud {
- color: var(--CLOUD, #F4F4FD);
+ color: #F4F4FD;
  font-family: Raleway;
- font-size: 18px;
- font-weight: 700;
  line-height: 116.667%;
- letter-spacing: 0.54px;
  text-transform: uppercase;
 }
