--- a/css/styles.css
+++ b/css/styles.css
@@ -78,11 +78,13 @@ font-family: "Roboto", sans-serif;
 line-height: 1.5;
 letter-spacing: 0.04em;
 color: #ffffff;
-cursor: pointer;
 font-weight: 500;
+font-size: 16pxж
 }
 .button:hover {background-color: #404BBF;}
 .button:active {background-color: #404BBF;}
+.button:focus {background-color: #404BBF;}
+
  .functions_list_item {
  color: #2e2f42;
 font-family: Roboto;
