--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 color: #ffffff;
 font-weight: 500;
-font-size: 16pxж
+font-size: 16px;
 }
 .button:hover {background-color: #404BBF;}
 .button:active {background-color: #404BBF;}
