--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ font-size: 16px;
 .button:focus {background-color: #404BBF;}
 
  .section_2_list_item {
- color: #2e2f42;
+color: #2e2f42;
 font-family: Roboto;
 font-size: 20px;
 font-weight: 500;
@@ -100,10 +100,19 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 
  }
+ .section_team {
+  background-color: #F4F4FD;
+
+ }
 
  .team_title {
+  color: #2e2f42;
 font-family: Roboto;
-line-height: 111.111%;
+text-transform: capitalize;
+font-size: 36px;
+line-height: 1.11;
+text-align: center;
+letter-spacing: 0.02em;
 text-transform: capitalize;
  }
  .team_name {
