--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@ font-size: 16px;
 .button:active {background-color: #404BBF;}
 .button:focus {background-color: #404BBF;}
 
- .section_2_list_item {
+ .section_2_title {
 color: #2e2f42;
 font-family: Roboto;
 font-size: 20px;
