--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,9 @@ font-size: 16px;
 .button:active {background-color: #404BBF;}
 .button:focus {background-color: #404BBF;}
 
- .section_2_title {
+ < !--section2-->
+
+ .section_2_list_item {
 color: #2e2f42;
 font-family: Roboto;
 font-size: 20px;
@@ -98,12 +100,12 @@ color: #434455;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
+}
 
- }
+ < !--section3-->
  .section_team {
   background-color: #F4F4FD;
-
- }
+}
 
  .section_team_title {
   color: #2e2f42;
@@ -115,7 +117,7 @@ text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
  }
-  .section_3 {
+  .background {
 background-color: #FFFFFF;
   }
  
