--- a/css/styles.css
+++ b/css/styles.css
@@ -85,8 +85,6 @@ font-size: 16px;
 .button:active {background-color: #404BBF;}
 .button:focus {background-color: #404BBF;}
 
- <!--section2-->
-
  .section_2_list_item {
 color: #2e2f42;
 font-family: Roboto;
@@ -100,12 +98,12 @@ color: #434455;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-}
 
- <!--section3-->
+ }
  .section_team {
   background-color: #F4F4FD;
-}
+
+ }
 
  .section_team_title {
   color: #2e2f42;
@@ -117,15 +115,15 @@ text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
  }
-  
+  .section_3 {
+background-color: #FFFFFF;
+  }
  
  .team_profession {
 color:#434455;
 letter-spacing: 0.32px;
 line-height: 150%; 
  }
- <!--section4-->
-
  .portfolio_title {
   color: #2e2f42;
   font-size: 36px;
