--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,20 @@
 a:link { text-decoration: none; } a:visited { text-decoration: none; } a:hover { text-decoration: none; } a:active { text-decoration: none; }
+ul,
 
+ol {
+
+  margin-top: 0;
+
+  margin-bottom: 0;
+
+  padding-left: 0;
+}
+
+img {
+
+  display: block;
+
+}
 body {
 
 font-family: Roboto, sans-serif; 
